--- a/mortgage-front/src/app/admin/customer-list/customer-list.component.html
+++ b/mortgage-front/src/app/admin/customer-list/customer-list.component.html
@@ -2,6 +2,7 @@
   <mat-form-field>
     <mat-label>חפש</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="לדוגמה, שם">
+    <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
   <div id="main">
 
