--- a/mortgage-front/src/app/shared/mortgage-calculator/mortgage-calculator.component.html
+++ b/mortgage-front/src/app/shared/mortgage-calculator/mortgage-calculator.component.html
@@ -1,6 +1,6 @@
 <div id="main">
   <mat-card class="mortgage-calculator">
-    <mat-card-title>מחשבון משכנתאות</mat-card-title>
+    <mat-card-title>מחשבון משכנתאות🏠</mat-card-title>
     <p class="warning-text">מחשבון המשכנתא הוא כלי עזר באמצעותו תוכלו לבצע סימולציות שיסייעו לכם בתהליך תכנון המשכנתא.
       <br>
       יש להקליד את סכום ההלוואה המבוקש ולבחור את תקופת ההלוואה.
