--- a/mortgage-front/src/app/admin/user-list/user-list.component.html
+++ b/mortgage-front/src/app/admin/user-list/user-list.component.html
@@ -4,6 +4,7 @@
         <mat-form-field class="form-field" dir="rtl">
             <mat-label>חפש</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="לדוג. שם">
+            <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
     </div>        
     <div class="rtl-table-wrapper">
