--- a/mortgage-front/src/app/shared/mortgage-calculator/mortgage-calculator.component.css
+++ b/mortgage-front/src/app/shared/mortgage-calculator/mortgage-calculator.component.css
@@ -5,11 +5,11 @@
   background: #f5f5f5;
   border-radius: 10px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-
+  /* border: 1px rgb(17, 17, 152) solid; */
 }
 #main{
   background-color: rgba(255, 255, 255, 0.557);
-  width: 100%;
+  width: 99%;
   border-radius: 10px;
   border: 5px solid rgba(128, 128, 128, 0.13);
 }
