--- a/mortgage-front/src/app/admin/send-notification/send-notification.component.css
+++ b/mortgage-front/src/app/admin/send-notification/send-notification.component.css
@@ -59,7 +59,7 @@ mat-form-field {
   word-wrap: break-word; 
   overflow-wrap: break-word;
   display: flex;
-
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .message-text {
