--- a/mortgage-front/src/app/customer/customer-update-detailes/customer-update-detailes.component.html
+++ b/mortgage-front/src/app/customer/customer-update-detailes/customer-update-detailes.component.html
@@ -56,7 +56,7 @@
             <div class="button-group">
               <button mat-raised-button color="primary" type="submit">שמור</button>
   
-              <button mat-raised-button color="warn" type="button" >ביטול</button>
+              <button mat-raised-button color="warn" type="button" (click)="cancel()" >ביטול</button>
   
             </div>
   
