--- a/mortgage-front/src/app/customer/documents-list-customer/documents-list-customer.component.html
+++ b/mortgage-front/src/app/customer/documents-list-customer/documents-list-customer.component.html
@@ -1,92 +1,102 @@
 <main style="background-color: rgba(255, 255, 255, 0.708);padding-bottom: 150px;padding-top: 20px;">
-  <!-- כותרת הדף -->
- <!-- כותרת הדף -->
-<header class="header-container">
-  <div class="header-content">
-    
-  <!-- שדה חיפוש -->
-  <!-- <div class="search-container" >
-    <mat-form-field appearance="fill" class="search-field">
-      <mat-label>חפש מסמך</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="הקלד לחיפוש" #input  />
-      <mat-icon matSuffix>search</mat-icon>
-    </mat-form-field>
-  </div> -->
-    <h1 class="header-title">ניהול מסמכים</h1>
-    <h2 class="header-subtitle">העלה, נהל וצפה במסמכים שלך בקלות</h2>
-  </div>
-</header>
-
+  <header class="header-container">
+    <div class="header-content">
+      @if (this.loginService.isAdmin()) {
+        <mat-form-field appearance="fill" style="float: left;"> 
+          <mat-label>חפש לקוח</mat-label>
+          <input type="text" matInput [formControl]="customerControl" [matAutocomplete]="auto">
+          <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayCustomer" (optionSelected)="onCustomerSelected($event.option.value)">
+            <mat-option *ngFor="let customer of filteredCustomers | async" [value]="customer">
+              {{ customer.first_Name }} {{customer.last_Name}} {{customer.phone}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+        
+        }
+      <h1 class="header-title">ניהול מסמכים</h1>
+      <h2 class="header-subtitle">העלה, נהל וצפה במסמכים שלך בקלות</h2>
+    </div>
+  </header>
 
   <!-- תוכן עיקרי -->
   <div class="content-container">
     @if(dataSource.data.length > 0) {
-      <div class="cards-container">
-        <ng-container *ngFor="let element of dataSource.data, let i=index">
-          <mat-card class="document-card" >
-            <mat-card-header>
-              <mat-card-title>{{ element.task_description }}</mat-card-title>
-              <mat-card-subtitle>{{ changeTransacTypeToString(element.document_type_id) }}</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content>
-              <p><b>סטטוס:</b> {{ changeDocStatusToString(element.status) }}</p>
-              <p><b>תאריך עדכון:</b> {{ element.status == 2 ? formatDate(element.created_at) : 'לא זמין' }}</p>
-              <div class="document-actions">
-                @if(element.status == 0) {
-                  <button
-                    mat-icon-button
-                    aria-label="upload file"
-                    (click)="fileInput.click()"
-                    matTooltip="צירוף מסמך"
-                    matTooltipPosition="left"
-                  >
-                    <mat-icon>attach_file</mat-icon>
-                    <input
-                      type="file"
-                      #fileInput
-                      (change)="onFileSelected($event, element)"
-                      style="display: none"
-                    />
-                  </button>
-                } @if (element.status == 1) {
-                  <span class="document-name" (click)="viewDocument(view(element.id))" style="max-width: 80%;">
-                    {{ view(element.id)?.name }}
-                  </span>
-                  <button mat-button (click)="xfunc(element,i)">ביטול</button>
-                } @if (element.status == 2) {
-                  <span class="document-name">
-                    {{ view(element.id)?.name }}
-                  </span>
-                }
-                <mat-checkbox
-                  (change)="onCheckboxChange($event.checked, element)"
-                  [disabled]="element.status !== 1"
-                  [matTooltip]="element.status === 0 ? 'עדיין לא נבחר מסמך' : ''"
-                ></mat-checkbox>
-              </div>
-            </mat-card-content>
-          </mat-card>
-        </ng-container>
-      </div>
-
-      <!-- כפתור שליחה -->
-      <div class="send-container">
-        <button mat-flat-button (click)="saveFiles()" class="send-button" dir="rtl">
-          <mat-icon class="send-icon">send</mat-icon>
-          <span class="button-text">שלח מסמכים שנבחרו</span>
-        </button>
-      </div>
-    } @else {
-      <div class="no-docs-message">
-        <mat-card class="no-docs-card">
-          <mat-card-content>לא נמצאו עבורך מסמכים</mat-card-content>
+    <div class="cards-container">
+      <ng-container *ngFor="let element of dataSource.data, let i=index">
+        <mat-card class="document-card">
+          <mat-card-header>
+            <mat-card-title>{{ element.task_description }}</mat-card-title>
+            <mat-card-subtitle>{{ changeTransacTypeToString(element.document_type_id) }}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content> 
+            <p><b>סטטוס:</b> {{ changeDocStatusToString(element.status) }}</p>
+            <p><b>תאריך עדכון:</b> {{ element.status == 2 ? formatDate(element.created_at) : 'לא זמין' }}</p>
+            <div class="document-actions">
+              @if(element.status == 0) {
+              <button mat-icon-button aria-label="upload file" (click)="fileInput.click()" matTooltip="צירוף מסמך"
+                matTooltipPosition="left">
+                <mat-icon>attach_file</mat-icon>
+                <input type="file" #fileInput (change)="onFileSelected($event, element)" style="display: none" />
+              </button>
+              } @if (element.status == 1) {
+              <span class="document-name" (click)="viewDocument(view(element.id))" style="max-width: 80%;">
+                {{ element.document_path }}
+              </span>
+              <button mat-button (click)="cancelDocument(element)">ביטול</button>
+              } @if (element.status == 2) {
+              <span class="document-name" (click)="download(element.id.toString())">
+                {{ element.document_path}}
+              </span>
+              }
+              @if (element.status==2||element.status==0) {
+              <mat-checkbox (change)="onCheckboxChange($event.checked, element)" [disabled]="true"
+                [matTooltip]="element.status === 2? 'נבחר מסמך':'עדיין לא נבחר מסמך'"></mat-checkbox>}
+              @else{
+              <mat-checkbox (change)="onCheckboxChange($event.checked, element)" [disabled]="element.status !== 1"
+                [matTooltip]=" 'אשר מסמך' "></mat-checkbox>}
+            </div>
+            @if(this.loginService.isAdmin()){
+            <button mat-icon-button [matMenuTriggerFor]="actionsMenu" matTooltip="אפשרויות נוספות"
+              matTooltipPosition="left" class="icon-button">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #actionsMenu="matMenu">
+              <button mat-menu-item (click)="editTask(element)" class="icon-button edit">
+                <mat-icon>edit</mat-icon>
+                <span>עריכת משימה</span>
+              </button>
+              <button mat-menu-item (click)="deleteTask(element)" class="icon-button delete">
+                <mat-icon>delete</mat-icon>
+                <span>מחיקת משימה</span>
+              </button>
+            </mat-menu>
+          }
+          </mat-card-content>
         </mat-card>
-      </div>
+      </ng-container>
+    </div>
+
+    <!-- כפתור שליחה -->
+    <div class="send-container">
+      <button mat-flat-button (click)="saveFiles()" class="send-button" dir="rtl">
+        <mat-icon class="send-icon">send</mat-icon>
+        <span class="button-text">שלח מסמכים שנבחרו</span>
+      </button>
+    </div>
+
+    } @else {
+    <div class="no-docs-message">
+      <mat-card class="no-docs-card">
+        <mat-card-content>לא נמצאו עבורך מסמכים</mat-card-content>
+      </mat-card>
+    </div>
     }
+
   </div>
 </main>
 <!-- טיפים לניהול מסמכים -->
 <div class="tips-container">
+  
   <mat-card class="tips-card">
     <mat-card-title class="tips-title">טיפים לניהול מסמכים</mat-card-title>
     <mat-card-content class="tips-content">
@@ -102,3 +112,9 @@
     </mat-card-content>
   </mat-card>
 </div>
+@if(this.loginService.isAdmin()){
+<button mat-fab color="primary" class="add-button" (click)="addTask()" matTooltip="הוספת משימה"
+  matTooltipPosition="above" style="position: fixed;bottom: 8vh;left: 2vw;z-index: 1000;">
+  <mat-icon class="add-icon">add</mat-icon>
+</button>
+}
